--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1",
-        "react-svg-morph": "^0.2.1"
+        "react-svg-morph": "^0.2.1",
+        "react-testing-library": "^8.0.1",
+        "styled-components": "^4.2.1"
     },
     "scripts": {
         "start": "react-scripts start",
