--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
         "@storybook/addon-links": "^5.0.11",
         "@storybook/addons": "^5.0.11",
         "@storybook/react": "^5.0.11",
-        "@svgr/cli": "^4.3.0",
-        "babel-loader": "^8.0.6"
+        "@svgr/cli": "^4.3.0"
     }
 }
