--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
         "react-svg-morph": "^0.2.1",
         "react-testing-library": "^8.0.1",
