--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "bootstrap": "^4.4.1",
+        "google-map-react": "^1.1.5",
         "google-maps-react": "^2.0.2",
         "react": "^16.8.6",
+        "react-bootstrap": "^1.0.0-beta.16",
         "react-dom": "^16.8.6",
         "react-geocode": "^0.2.1",
         "react-router-dom": "^5.0.1",
